refactor: upgrade viewservlets to Java 21 and purge deprecated SOAP/Axis stack
- Upgrade Java release version to 21 and update Jetty JSPC plugin to
12.1.5
- Upgrade jetty.ee8 to jetty.ee10
- Remove obsolete Apache Axis framework and legacy SOAP dependencies
(javax.xml.soap)
- Migrate remaining XML/Web-service dependencies to Jakarta EE (WSDL,
JAXB) (SOAP is emulated)
- Clean up OLAP and Data Engine tests by removing Axis-dependent
encoding logic and moving to org.eclipse.birt.olap
- Update .gitignore and environment scripts (runCBI.sh)
- Refactor build files and BIRT.setup to align with the new dependency
model
- BaseReportEngineServlet - SOAP emulation level - no changes in
Javascript was required - next step can be switch to plain REST on
Javascript side too

Sponsored by the generous contribution of https://www.digitalsystems.eu